# tcmalloc

./: .bazelrc  .gitignore  .travis.yml  BUILD  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  extensions.bzl  protobuf_deps.bzl  rules_fuzzing_deps.bzl
CMake/: TcmallocHelpers.cmake  TcmallocVariants.cmake  (+1 more)
tcmalloc/: BUILD  CMakeLists.txt  alloc_at_least.cc  alloc_at_least.h  allocation_sample.cc  allocation_sample.h  allocation_sample_test.cc  allocation_sampling.cc  allocation_sampling.h  arena.cc  arena.h  arena_test.cc  background.cc  central_freelist.cc  central_freelist.h  central_freelist_benchmark.cc  central_freelist_fuzz.cc  central_freelist_test.cc  common.cc  common.h  copts.bzl  cpu_cache.cc  cpu_cache.h  cpu_cache_activate_test.cc  cpu_cache_test.cc  deallocation_profiler.cc  deallocation_profiler.h  enable_heap_partitioning_default_on.cc  error_reporting.cc  error_reporting.h  experiment.cc  experiment.h  experiment_config.h  experiment_fuzz.cc  experimental_4k_size_class.cc  experimental_56_size_class.cc  experimental_cfl_aware_size_class.cc  experimental_pow2_below64_size_class.cc  experimental_pow2_size_class.cc  experimental_size_classes.cc  (+171 more)
tcmalloc/internal/: BUILD  CMakeLists.txt  affinity.cc  affinity.h  affinity_test.cc  allocation_guard.cc  allocation_guard.h  allocation_guard_test.cc  atomic_stats_counter.h  bits.h  bits_test.cc  bytes.h  bytes_test.cc  cache_topology.cc  cache_topology.h  cache_topology_test.cc  central_freelist_hooks.cc  central_freelist_hooks.h  config.h  config_test.cc  cpu_utils.h  declarations.h  delay_injection.cc  delay_injection.h  environment.cc  environment.h  explicitly_constructed.h  exponential_biased.h  exponential_biased_test.cc  fake_profile.h  gwp_asan_state.h  hook_list.cc  hook_list.h  lifetime_predictions.h  lifetime_predictions_test.cc  lifetime_tracker.h  lifetime_tracker_test.cc  linked_list.h  linked_list_benchmark.cc  linked_list_test.cc  (+81 more)
tcmalloc/internal/testdata/profile_builder_fuzz/: clusterfuzz-testcase-minimized-profile_builder_fuzz-5534221534363648  clusterfuzz-testcase-minimized-profile_builder_fuzz-5915530833559552  clusterfuzz-testcase-minimized-profile_builder_fuzz-6685031907328000.fuzz
tcmalloc/selsan/: BUILD  report_test.cc  selsan.cc  selsan.h  shadow_test.cc
tcmalloc/testdata/: clusterfuzz-testcase-minimized-huge_page_aware_allocator_fuzz-4796454007799808
tcmalloc/testdata/central_freelist_fuzz/: clusterfuzz-testcase-central_freelist_fuzz-6338860943802368  clusterfuzz-testcase-minimized-central_freelist_fuzz-5328515345809408
tcmalloc/testdata/huge_page_aware_allocator_fuzz/: clusterfuzz-testcase-minimized-huge_page_aware_allocator_fuzz-4650158169391104  clusterfuzz-testcase-minimized-huge_page_aware_allocator_fuzz-5216394376773632  clusterfuzz-testcase-minimized-huge_page_aware_allocator_fuzz-5397442449178624  clusterfuzz-testcase-minimized-huge_page_aware_allocator_fuzz-5580915038093312  clusterfuzz-testcase-minimized-huge_page_aware_allocator_fuzz-6140744194457600  clusterfuzz-testcase-minimized-huge_page_aware_allocator_fuzz-6302517124005888  testcase-4507694249082880  testcase-5091122805276672  testcase-5185382849773568  testcase-5781242586923008  testcase-5876893820977152  testcase-6591694528970752
tcmalloc/testdata/huge_page_filler_fuzz/: clusterfuzz-testcase-huge_page_filler_fuzz-5476984341004288  clusterfuzz-testcase-minimized-huge_page_filler_fuzz-5161409228701696.test  clusterfuzz-testcase-minimized-huge_page_filler_fuzz-5516474505363456.test  clusterfuzz-testcase-minimized-huge_page_filler_fuzz-6053674183688192.test  clusterfuzz-testcase-minimized-huge_page_filler_fuzz-6159120802381824  clusterfuzz-testcase-minimized-huge_page_filler_fuzz-6512022070886400.test  clusterfuzz-testcase-minimized-huge_page_filler_fuzz-6622985612820480  clusterfuzz_testcase_minimized_huge_page_filler_fuzz_5161409228701696_test.inc  clusterfuzz_testcase_minimized_huge_page_filler_fuzz_6053674183688192_test.inc  clusterfuzz_testcase_minimized_huge_page_filler_fuzz_6622985612820480.inc  crash-869dbc1cdf6a1f79b386adf046c7df32257ef684  crash-e9f3aa3ad83e808a5588ec529c6cdf00d5d397fc  testcase-6686265543557120
tcmalloc/testdata/huge_region_fuzz/: testcase-5235702354214912  testcase-5618130730156032
tcmalloc/testdata/malloc_extension_fuzz/: crash-4338e5c59e1bda5104fb5f0aa5553aeb1d3d6465  crash-c20bfc5c10e885f8e5498c2907cfab82da7c0cff
tcmalloc/testdata/sizemap_fuzz/: clusterfuzz-testcase-minimized-sizemap_fuzz-5240920228626432
tcmalloc/testdata/span_fuzz/: clusterfuzz-testcase-minimized-span_fuzz-6271015625031680  clusterfuzz-testcase-minimized-span_fuzz-6321706670620672.fuzz  crash-01d72a40d5815461b92d3f7c0f6377fd441b0034  crash-32697afd59029eb8356fee8ba568e7f6b58d728f  crash-42b80edf9551d1095aebb6724c070ee43d490125  crash-500955af6568b0ed234bd40d6a01af496ba15eb2  crash-6ef2b6ae2246d1bda0190983b1007df2699e7738  crash-746940d0368bfe3e4a94b60659eeb6cb87106618  testcase-5877384059617280
tcmalloc/testdata/transfer_cache_fuzz/: leak-0b593173f17376c77a3a74a6644af58f77d7a366
tcmalloc/testing/: BUILD  CMakeLists.txt  aligned_new_test.cc  alloc_at_least_test.c  background_test.cc  central_freelist_tracing_test.cc  current_allocated_bytes_test.cc  deallocation_profiler_test.cc  default_parameters_test.cc  empirical.cc  empirical.h  empirical_benchmark.cc  empirical_distributions.cc  empirical_distributions.h  empirical_distributions_benchmark.cc  empirical_distributions_test.cc  empirical_driver.cc  empirical_test.cc  fast_path.aarch64+opt.golden  fast_path.insecure.golden  fast_path.opt.golden  fast_path.release+insecure.golden  fast_path.release.golden  fast_path.unstable.insecure.golden  fast_path.unstable.opt.golden  fast_path.unstable.release+insecure.golden  fast_path.unstable.release.golden  frag_test.cc  frag_unittest.cc  get_stats_test.cc  heap_profiling_test.cc  hello_main.cc  hooks_test.cc  large_alloc_size_test.cc  largesmall_frag_test.cc  lifetimes_test.cc  limit_test.cc  malloc_extension_system_malloc_test.cc  malloc_extension_test.cc  malloc_hook_recorder.cc  (+58 more)
(+41 files in other folders)
