module(
    name = "tcmalloc",
    version = "0",
    compatibility_level = 0,
    repo_name = "com_google_tcmalloc",
)

bazel_dep(name = "abseil-cpp", version = "20240116.2", repo_name = "com_google_absl")
bazel_dep(name = "google_benchmark", version = "1.8.3", repo_name = "com_github_google_benchmark")
bazel_dep(name = "googletest", version = "1.13.0", repo_name = "com_google_googletest")
bazel_dep(name = "protobuf", version = "26.0", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_fuzzing", version = "0.5.1")
bazel_dep(name = "rules_proto", version = "4.0.0")
